--- a/home/newIndex.css
+++ b/home/newIndex.css
@@ -89,7 +89,7 @@
 }
 .btn-primary {
     color: #000;
-     border: none;
+    border: none;
 }
 
 .btn-secondary {
@@ -102,18 +102,23 @@
 .section-1 {
     display: flex;
     flex-direction: column;
-    padding-top: 5rem;
+    padding-top: 4rem;
     gap: 9rem;
     align-items: center;
     justify-content: center;
 }
 
+.section-1 h1 {
+    font-size: 2rem;
+    text-align: center;
+}
 .section-1 .services {
+    margin-top: -4rem;
   display: flex;
   gap: 50px; /* space between cards */
   justify-content: space-between;
   /* align-items: stretch; make cards equal height */
-  padding: 2rem; /* wraps on smaller screens */
+  padding: 1rem; /* wraps on smaller screens */
 }
 
 .card {
@@ -135,12 +140,84 @@
 .feature-icon img{
     width: 20rem;
     height: 12rem;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-bottom: 1.5rem;
 }
+
 .content h4 {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 1.1rem;
-    margin-bottom: 1.8rem;
+    margin-bottom: 1.4rem;
 }
 
+.content p {
+    font-size: .8rem;
+    margin-bottom: 1.2rem;
+}
+
+.content a {
+    text-decoration: none;
+    color: #1f1e1e;
+}
+
+/* ------ SECTION-2 */
+
+.section-2 {
+    display: flex;
+    padding: 5.5rem;
+    gap: 30px;
+    background-color: #f7f7f7;
+    justify-content: space-between;
+}
+
+.article {
+    flex: 2;
+}
+
+.left-article .top-text{
+    padding-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.top-text .top {
+    font-weight: 500;
+}
+
+.top-text h1 {
+    font-size:2.3rem;
+    font-weight: 600;
+}
+
+.top-text .bottom {
+    font-size:.9rem;
+    line-height: 1.5rem;
+    color: #292828;
+    font-weight: 400;
+}
+#banner{
+    width: 30rem;
+    height: 28.5rem;
+    border-radius: 5px;
+}
+
+.lists ul {
+    padding-left: 1.2rem;
+}
+
+.lists ul li p {
+    color: #292828;
+    font-weight: .5rem;
+}
+.cta {
+    margin-top: 1.5rem;
+}
+.cta .sign-up {
+    padding: .8rem 1.3rem;
+    outline: none;
+    border-radius: 20px;
+    color: #fff;
+    background-color: #292828;
+    border: none;
+}
